--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el tiltulo atractivo e interesante del post</h1>
             <p>Este es el parrafo de inicio</p>
+            <p>Parrfo nuevo</p>
         </div>
     </div>  
 </body>
