Cambiando el footer

--- a/blogspot.html
+++ b/blogspot.html
@@ -20,6 +20,9 @@
             <p>Este es el parrafo de inicio</p>
             <p>Parrfo nuevo</p>
         </div>
+        <div id="footer">
+            Hecho con amor en platzi
+        </div>
     </div>  
 </body>
 </html>
